FIX: contact details drawer css on mobile device fix

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -60,6 +60,7 @@
 
   #contact-details>.drawer {
     width: max-content;
+    gap: calc(var(--space-3px) * 9);
   }
 
   #about {
