--- a/index.css
+++ b/index.css
@@ -189,20 +189,19 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 calc(var(--space-2px) * 8);
 }
 
 #contact-details>.drawer {
-  margin: 0 calc(var(--space-2px) * 8);
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: calc(var(--space-3px) * 9);
   backdrop-filter: var(--header-backdrop-filter);
   box-shadow: 0 calc(var(--space-2px) * 2) calc(var(--space-3px) * 2) var(--color-secondary-shadow-1), 0 var(--space-1px) var(--space-3px) var(--color-secondary-shadow-2);
   border-radius: calc(var(--space-5px) * 2);
-  padding: calc(var(--space-5px) * 2);
   background-color: var(--color-primary);
+  padding: calc(var(--space-5px) * 2) calc(var(--space-5px) * 2);
 }
 
 #contact-details>.drawer>a {
@@ -211,18 +210,19 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: calc(var(--space-3px) * 16);
+  height: calc(var(--space-3px) * 16);
+  /* background-image: url("./assets/images/icons.png"); */
+  background-repeat: no-repeat;
+}
+
+.dark #contact-details>.drawer>a[data-is-filter-invert-needed="true"] {
+  filter: invert(1);
 }
 
 #contact-details>.drawer>a>img {
-  width: calc(var(--space-2px) * 16);
-  height: calc(var(--space-2px) * 16);
-}
-
-#contact-details>.drawer>a {
-  width: calc(var(--space-2px) * 16);
-  height: calc(var(--space-2px) * 16);
-  background-image: url("./assets/images/icons.png");
-  background-repeat: no-repeat;
+  width: calc(var(--space-5px) * 8);
+  height: calc(var(--space-5px) * 8);
 }
 
 .mail {
@@ -243,10 +243,6 @@ main {
 
 .twitter {
   background-position: -10px -62px;
-}
-
-.dark #contact-details>.drawer>a[data-is-filter-invert-needed="true"] {
-  filter: invert(1);
 }
 
 #about {
